# autoerror

./: Cargo.toml  README.md
src/: lib.rs
tests/: basic_compile.rs  double_auto_error.rs  double_auto_error.stderr  error_struct.rs  error_struct.stderr  main.rs  test_generation.rs
