[package]
name = "autoerror"
version = "1.0.0"
authors = ["David Venhoek <david@tweedegolf.com>"]
description = "Automatically generate error handling traits."
repository = "https://github.com/tweedegolf/autoerror"
license = "MIT"
edition = "2018"
autotests = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/main.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
syn = { version = "1.0.60", features = ["extra-traits"] }
quote = "1.0.9"
